tests/idris2/reg/reg048/expected
1/1: Building inferror (inferror.idr)
Error: While processing right hand side of g. Ambiguous elaboration. Possible results:
    Main.toList m
    Prelude.toList m

inferror:14:17--14:23
 10 | f m = case sortBy (\(x, _), (y, _) => compare x y) (Main.toList m) of
 11 |     as => as
 12 | 
 13 | g : Ord k => SortedMap k v -> List (k, v)
 14 | g m = let kvs = toList m in
                      ^^^^^^

